fix : home page - footer not showing

--- a/src/app/style.module.scss
+++ b/src/app/style.module.scss
@@ -3,7 +3,6 @@
 .layout_container {
   display: flex;
   flex-direction: column;
-  height: 100%;
 }
 
 .wrapper {
